--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "cra-template-typescript": "1.2.0",
     "firebase": "^11.2.0",
+    "glob": "10.4.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-modal": "^3.16.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "web-vitals": "^4.2.4"
   },
