--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/storage": "^0.13.7",
     "cra-template-typescript": "1.2.0",
-    "firebase": "^11.2.0",
+    "firebase": "^11.4.0",
     "glob": "10.4.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
